--- a/.github/workflows/run-stock-report.yml
+++ b/.github/workflows/run-stock-report.yml
@@ -2,7 +2,7 @@ name: Run Stock Report Script
 
 on:
   schedule:
-    - cron: '45 3 * * *'  # 3:45 AM UTC = 9:15 AM IST
+    - cron: '37 3 * * *'  # 3:37 AM UTC = 9:07 AM IST / 3:45 AM UTC = 9:15 AM IST
   workflow_dispatch:
 
 jobs:
