--- a/.github/workflows/run-stock-report.yml
+++ b/.github/workflows/run-stock-report.yml
@@ -30,3 +30,4 @@ jobs:
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
         run: python test1.py
+        run: Swing_Str2.py
