--- a/.github/workflows/run-stock-report.yml
+++ b/.github/workflows/run-stock-report.yml
@@ -1,12 +1,12 @@
-name: Run Stock Report Script
+name: Run Stock Report Scripts
 
 on:
   schedule:
-    - cron: "28 3 * * *"   # Runs at 03:38 UTC = 09:08 IST  #3:47 AM UTC = 9:17 AM IST OR  3:37 AM UTC = 9:07 AM IST OR 3:45 AM UTC = 9:15 AM IST 
+    - cron: "28 3 * * *"   # Runs at 03:38 UTC = 09:08 IST
   workflow_dispatch:
 
 jobs:
-  run-script:
+  run-scripts:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,11 +22,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -r Swing_Str2/requirements.txt
 
-
-      - name: Run the script
+      - name: Run test1.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        run: python test1.py
+        run: python test1.py &
+
+      - name: Run Swing_Str2.py
+        env:
+          GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
+          SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+        run: python Swing_Str2/Swing_Str2.py &
+
+      - name: Wait for scripts to complete
+        run: wait
