--- a/.github/workflows/run-stock-report.yml
+++ b/.github/workflows/run-stock-report.yml
@@ -1,4 +1,4 @@
-name: Run Stock Report Scripts
+name: Run Stock Report Script
 
 on:
   schedule:
@@ -6,9 +6,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-scripts:
+  run-script:
     runs-on: ubuntu-latest
-    timeout-minutes: 30  # Increased timeout to 30 minutes
 
     steps:
       - name: Checkout repository
@@ -19,45 +18,26 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Install dependencies for test1.py
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r Swing_Str2/requirements.txt
+          pip install -r requirements.txt  # For test1.py
 
       - name: Run test1.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+        run: python test1.py
+
+      - name: Install additional dependencies for Swing_Str2.py
         run: |
-          python test1.py > test1.log 2>&1
-          if [ $? -ne 0 ]; then
-            echo "test1.py failed, see test1.log for details"
-            exit 1
-          fi
+          pip install python-dotenv==1.0.1 scipy==1.14.1  # Additional dependencies for Swing_Str2.py
 
       - name: Run Swing_Str2.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        run: |
-          python Swing_Str2/Swing_Str2.py > swing_str2.log 2>&1
-          if [ $? -ne 0 ]; then
-            echo "Swing_Str2.py failed, see swing_str2.log for details"
-            exit 1
-          fi
-
-      - name: Upload logs (if any)
-        uses: actions/upload-artifact@v3
-        if: always()  # Upload logs regardless of success or failure
-        with:
-          name: script-logs
-          path: |
-            test1.log
-            swing_str2.log
-
-      - name: Clean up
-        if: always()
-        run: rm -f test1.log swing_str2.log
+          SWING_STOCK_EXPORT_SHEET_ID: ${{ secrets.SWING_STOCK_EXPORT_SHEET_ID }}  # Add this if needed
+        run: python Swing_Str2.py
