--- a/.github/workflows/run-stock-report.yml
+++ b/.github/workflows/run-stock-report.yml
@@ -1,4 +1,4 @@
-name: Run Stock Report Script
+name: Run Stock Report Scripts
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-script:
+  run-scripts:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,25 +18,25 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies for test1.py
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # For test1.py
+          pip install -r requirements.txt
+          pip install -r Swing_Str2/requirements.txt
 
       - name: Run test1.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        run: python test1.py
-
-      - name: Install additional dependencies for Swing_Str2.py
-        run: |
-          pip install python-dotenv==1.0.1 scipy==1.14.1  # Additional dependencies for Swing_Str2.py
+        run: python test1.py &
 
       - name: Run Swing_Str2.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        run: python Swing_Str2.py
+        run: python Swing_Str2/Swing_Str2.py &
+
+      - name: Wait for scripts to complete
+        run: wait
