--- a/.github/workflows/run-stock-report.yml
+++ b/.github/workflows/run-stock-report.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           pip install python-dotenv==1.0.1 scipy==1.14.1  # Additional dependencies for Swing_Str2.py
 
-      - name: Run Swing_Str2.py
+      - name: Run /Swing_Str2/Swing_Str2.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
