--- a/.github/workflows/run-stock-report2.yml
+++ b/.github/workflows/run-stock-report2.yml
@@ -18,17 +18,17 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies for test1.py
+      - name: Install dependencies for ORB_setup.py
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # For test1.py
+          pip install -r requirements.txt  # For ORB_setup.py
 
-      - name: Run test1.py
+      - name: Run ORB_setup.py
         env:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
           SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        run: python test1.py
+        run: python ORB_setup.py
 
       - name: Install additional dependencies for Swing_Str2.py
         run: |
